> Fixed: Rewind button should be disabled when the timeline knob is at t=0
> Fixed: Slowest mode should be slower (maybe 1/2 this speed)
> Fixed: Switching from playback mode to record should clear the vectors on the bug
> Fixed: Clear button should put the sim in record mode if it was in playback mode

# 1.20.33 (28801) Feb 19, 2009
Batch deploy for alpha Simulation Tests, svn 28773
# 1.20.32 (28726) Feb 18, 2009
Deploy aphid maze
# 1.20.31 (28723) Feb 18, 2009
Deploy first version of Aphid Maze
# 1.20.30 (28721) Feb 18, 2009
Improvements for Aphid Maze
> Fixed: open sim > click frictionless > click circular. Bug will not move.

# 1.20.29 (28260) Feb 8, 2009
> Bugfixes for remote control
> Ladybug comes to rest when turning friction on
> Increased size of return ladybug button
> Click-Drag from the center dot in Remote Control creates a vector
> Fixed: Manually moving the ladybug out of the frame, then clicking on return ladybug causes her to run offscreen again; her motion and position should be cleared on reset.
> Improved layout of time control panel
> Sim pauses when selecting playback mode, rather than automatically playing when you click the radio button.

# 1.20.28 (28207) Feb 6, 2009
> Fixed: Remote control arrow node captures mouse input
> Fixed: Switching to manual mode doesn't work after timeline is full.
> Fixed: remote control does not work if you click inside of the arrow (you have to click outside of the arrow, or very near the tip it seems).
> Fixed: "Throwable" box should be labeled "Frictionless".
> Fixed: Reset All does not return "Throwable" to default (off) state.
> Fixed: "Throwable" checkbox should be moved to right above remote control.
> Fixed: "Reset All" should be centered in the bottom of control panel.
> Fixed: Changed "Recording" to "Record" in mode indicator

# 1.20.27 (28186) Feb 5, 2009
> Rewind works when in playback mode.
> If you select "Playback" radio button it rewinds and puts you in playback mode.